# hand-tracking-mediapipe-opencv

./: README.md  main.py  main_media.py  pyproject.toml
