[project]
name = "hand-tracking-mediapipe-opencv"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro P. Camellon",email = "pedropcamellon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mediapipe (>=0.10.20,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
